k8s/05-nexora-landing.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nexora-landing
  namespace: nexora
  labels:
    app.kubernetes.io/name: nexora-landing
    app.kubernetes.io/part-of: nexora-stack
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nexora-landing
  template:
    metadata:
      labels:
        app: nexora-landing
    spec:
      containers:
        - name: nexora-landing
          image: slimbouzidi/nexora:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
              name: http
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 20
            periodSeconds: 15
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: nexora-landing-service
  namespace: nexora
  labels:
    app.kubernetes.io/name: nexora-landing-service
    app.kubernetes.io/part-of: nexora-stack
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: 3000
      name: http
  selector:
    app: nexora-landing
