k8s/06-nexora-dashboard.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nexora-dashboard
  namespace: nexora
  labels:
    app.kubernetes.io/name: nexora-dashboard
    app.kubernetes.io/part-of: nexora-stack
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nexora-dashboard
  template:
    metadata:
      labels:
        app: nexora-dashboard
    spec:
      containers:
        - name: nexora-dashboard
          image: slimbouzidi/nexora-dashboard:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3001
              name: http
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          livenessProbe:
            httpGet:
              path: /dashboard
              port: 3001
            initialDelaySeconds: 20
            periodSeconds: 15
          readinessProbe:
            httpGet:
              path: /dashboard
              port: 3001
            initialDelaySeconds: 10
            periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: nexora-dashboard-service
  namespace: nexora
  labels:
    app.kubernetes.io/name: nexora-dashboard-service
    app.kubernetes.io/part-of: nexora-stack
spec:
  type: ClusterIP
  ports:
    - port: 3001
      targetPort: 3001
      name: http
  selector:
    app: nexora-dashboard
